--- a/src/ionic-floatpicker.html
+++ b/src/ionic-floatpicker.html
@@ -1,11 +1,13 @@
 <div class="24HourTimePickerChildDiv">
     <div class="row">
         <span class="button-small col col-35">
-          <button type="button" class="button button-clear button-small button-dark timePickerArrows marginBottom10"
+            <button type="button" class="button button-clear button-small button-dark timePickerArrows marginBottom10"
                   ng-click="increaseInt()">
               <i class="icon ion-chevron-up"></i></button>
-          <div ng-bind="number.int" class="ipBoxes timePickerBoxText"></div>
-          <button type="button" class="button button-clear button-small button-dark timePickerArrows marginTop10"
+
+            <input ng-model="number.int" class="ipBoxes timePickerBoxText"/>
+
+            <button type="button" class="button button-clear button-small button-dark timePickerArrows marginTop10"
                   ng-click="decreaseInt()">
               <i class="icon ion-chevron-down"></i></button>
         </span>
@@ -13,11 +15,14 @@
         <label class="col col-10 timePickerColon">,</label>
 
         <span class="button-small col col-35">
-          <button type="button" class="button button-clear button-small button-dark timePickerArrows marginBottom10"
+            <button type="button" class="button button-clear button-small button-dark timePickerArrows marginBottom10"
                   ng-click="increaseFloat()"><i class="icon ion-chevron-up"></i></button>
-          <div ng-bind="number.floatLabel" class="ipBoxes timePickerBoxText"></div>
-          <button type="button" class="button button-clear button-small button-dark timePickerArrows marginTop10"
-                  ng-click="decreaseFloat()"><i class="icon ion-chevron-down"></i></button>
+
+
+            <input ng-model="number.floatLabel" class="ipBoxes timePickerBoxText" ng-change="setFloat()"/>
+
+            <button type="button" class="button button-clear button-small button-dark timePickerArrows marginTop10"
+                    ng-click="decreaseFloat()"><i class="icon ion-chevron-down"></i></button>
         </span>
     </div>
 </div>
